Responsive Homepage on mobile 'still have some issues  '

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,16 @@ nav.navbar ul.navbar-nav li.nav-item a.nav-link {
     margin-left: 25px;
 }
 
+nav.navbar button.navbar-toggler {
+    font-size: 30px;
+    height: 50px;
+    width: 50px;
+    color: white;
+    box-shadow: none;
+    outline: none;
+    padding: 0;
+}
+
 /************************
 **************************
 End Navbar
@@ -765,10 +775,12 @@ section.NewsLetter {
 section.NewsLetter .Texts {
     font-weight: 600;
 }
-section.NewsLetter .NewsLetterImgPart{
+
+section.NewsLetter .NewsLetterImgPart {
     justify-content: end;
-    
+
 }
+
 section.NewsLetter .NewsLetterImg {
     width: 80%;
 }
@@ -1189,102 +1201,163 @@ End Footer
     section.Stat .StatisticsRow .TwoStatDiv .statDiv .statTextRow {
         min-width: 150px;
     }
-    section.Stat .StatisticsRow .statDiv .statICon{
+
+    section.Stat .StatisticsRow .statDiv .statICon {
         margin-left: 0px;
     }
-    section.Stat .StatisticsRow .statDiv .statICon img{
+
+    section.Stat .StatisticsRow .statDiv .statICon img {
         width: 80px;
         margin-bottom: 20px;
     }
-    section.FAQ img.FAQImg{
+
+    section.FAQ img.FAQImg {
         position: unset;
     }
-    section.NewsLetter{
+
+    section.NewsLetter {
         margin-top: 0px;
     }
-    section.NewsLetter .NewsLetterImg,  section.SystemStatus .ImgPart img{
+
+    section.NewsLetter .NewsLetterImg, section.SystemStatus .ImgPart img {
         width: 50%;
         margin: auto;
         margin-top: 20px;
     }
+
     section.SystemStatus .ImgPart {
         display: flex;
     }
 
 }
 
-@media (max-width: 767px){
+@media (max-width: 767px) {
     section.Bundels .card-overlay .Batch .batchType {
         font-size: 18px;
     }
+
     .container-sm, .container {
         max-width: 665px;
     }
 }
-@media (max-width: 575px){
+
+@media (max-width: 575px) {
     .container-sm, .container {
         max-width: unset;
     }
-    section.Stat .StatisticsRow .TwoStatDiv .statDiv{
+
+    section.Stat .StatisticsRow .TwoStatDiv .statDiv {
         min-width: unset;
         margin-right: 0px;
     }
+
     header.header .BannerTextPart h1 {
         font-size: 35px;
         line-height: 50px;
     }
+
     header.header .BannerTextPart .greenBtnLink, header.header .BannerTextPart .whiteBtnLink {
         width: 50%;
     }
+
     section.Stat .StatisticsRow .statDiv .statICon img {
         width: unset;
         height: 75px;
     }
-    .sectionTitle img{
+
+    .sectionTitle img {
         width: 60px;
     }
+
     .sectionTitle {
         font-size: 32px;
     }
-    section.FourSteps .CardNumber{
+
+    section.FourSteps .CardNumber {
         display: none;
     }
+
     .paragraph {
         line-height: 30px;
     }
+
     section.Transactions table thead tr th {
         font-size: 17px;
         line-height: 28px;
     }
+
     section.Transactions table tbody tr td {
         font-size: 9px;
     }
+
     section.FAQ .accordion .accordion-item .accordion-button {
         font-size: 20px;
         line-height: 30px;
     }
+
     section.FAQ img.FAQImg {
         margin-bottom: 20px;
     }
+
     section.NewsLetter .NewsLetterInputPart form input {
         width: 55%;
     }
-    .smallImgText .d-flex{
+
+    .smallImgText .d-flex {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
+
     .smallImgText .d-flex .ImagesPart {
         width: 100% !important;
     }
-    section.NewestBlogs .textPart{
+
+    section.NewestBlogs .textPart {
         width: 100% !important;
         justify-content: center;
         align-items: center;
         margin-top: 20px;
     }
+
     header.header {
         padding-top: 65px !important;
         height: 100vh;
+    }
+
+    .navbar-collapse {
+
+        position: absolute;
+        left: 0;
+        top: 0;
+        background: linear-gradient(90deg, #312F69 0%, #07959D 50%, #312F69 100%);
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center !important;
+        z-index: 1000;
+    }
+
+    nav.navbar .navbar-brand, nav.navbar button.navbar-toggler,nav.navbar .RegisterNavRow {
+        z-index: 2000;
+    }
+
+    nav.navbar ul.navbar-nav {
+        justify-content: center;
+    }
+
+    nav.navbar ul.navbar-nav li.nav-item a.nav-link {
+        text-align: center;
+        font-size: 30px;
+
+        margin-bottom: 25px;
+
+    }
+   
+    nav.navbar .greenBtnLink,nav.navbar .whiteBtnLink{
+        font-size: 13px;
+        padding: 10px 15px;
     }
 }
